--- a/src/app/inscription/inscription.page.scss
+++ b/src/app/inscription/inscription.page.scss
@@ -1,5 +1,5 @@
 img {
-  width: 70%;
+  width: 60%;
 }
 .form-group {
   margin-bottom: 6px !important;
@@ -19,21 +19,21 @@ input{
 }
 
 p.ins {
-  margin-top: 8px;
+  margin-top: 9px;
 }
 label {
   display: inline-block;
-  font-size: 11px;
+  font-size: 80%;
 }
-.txtAuth {
-  color: #171c25;
-  font-size: 0.6rem;
-  text-align: center;
-  margin: 0;
-  padding: 0;
-}
+// .txtAuth {
+//   color: #171c25;
+//   font-size: 0.6rem;
+//   text-align: center;
+//   margin: 0;
+//   padding: 0;
+// }
 
-.iconss {
-  text-align: center;
-  margin-bottom: 10px;
-}
+// .iconss {
+//   text-align: center;
+//   margin-bottom: 10px;
+// }
