--- a/src/app/ministere/ministere.page.scss
+++ b/src/app/ministere/ministere.page.scss
@@ -1,66 +1,71 @@
-.social-cards ion-col {
-  padding: 0;
-}
+// .social-cards ion-col {
+//   padding: 0;
+// }
 
-.tt {
-  margin-top: 7px;
-  margin-left: -65px;
-  position: absolute;
-}
-h2 {
-  margin-left: 5%;
-  margin-top: -3%;
-}
+// .tt {
+//   margin-top: 7px;
+//   margin-left: -65px;
+//   position: absolute;
+// }
+// h2 {
+//   margin-left: 5%;
+//   margin-top: -3%;
+// }
 
 button {
   background: none;
 }
-ul {
-  z-index: 120;
-}
+// ul {
+//   z-index: 120;
+// }
 
-ion-buttons.buttons-last-slot.sc-ion-buttons-md-h.sc-ion-buttons-md-s.md.hydrated {
-  margin-left: 26px;
-}
-.sc-ion-buttons-ios-h {
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-transform: translateZ(0);
-  transform: translateZ(0);
-  z-index: 99;
-  margin-left: 10px;
-}
-.nav {
-  position: fixed;
-}
+// ion-buttons.buttons-last-slot.sc-ion-buttons-md-h.sc-ion-buttons-md-s.md.hydrated {
+//   margin-left: 26px;
+// }
+// .sc-ion-buttons-ios-h {
+//   display: -ms-flexbox;
+//   display: flex;
+//   -ms-flex-align: center;
+//   align-items: center;
+//   -webkit-transform: translateZ(0);
+//   transform: translateZ(0);
+//   z-index: 99;
+//   margin-left: 10px;
+// }
+// .nav {
+//   position: fixed;
+// }
 
-.imgae {
-  width: 40px !important;
-  height: 40px;
+// .imgae {
+//   width: 40px !important;
+//   height: 40px;
+// }
+
+.mm {
+  margin-left: -33%;
+  margin-top: 2%;
 }
 
 .textComment {
-  font-size: 10px;
-  text-align: justify;
+  font-size: 98%;
+ // text-align: justify;
 }
 .iconComment {
-  font-size: 12px;
+  font-size: 18px;
 }
 .card-header {
-  height: 55px !important;
+  height: 55% !important;
   background-color: white;
 }
 
 .card-footer {
-  height: 50px !important;
+  height: 55% !important;
   background-color: white;
 }
 
-.mm {
-  margin-left: -20%;
-}
+// .mm {
+//   margin-left: -20%;
+// }
 
 .mod {
   margin-top: 60%;
@@ -86,10 +91,10 @@ ion-buttons.buttons-last-slot.sc-ion-buttons-md-h.sc-ion-buttons-md-s.md.hydrate
   height: 35px;
 }
 
-.igm {
-  margin-left: 10%;
-  margin-right: 10%;
-}
+// .igm {
+//   margin-left: 10%;
+//   margin-right: 10%;
+// }
 
 .noir {
   
