--- a/src/app/password-update/password-update.page.html
+++ b/src/app/password-update/password-update.page.html
@@ -1,9 +1,14 @@
 <ion-header>
   <ion-toolbar style="--background: #24a8f2">
-    <ion-buttons slot="start" style="color: white">
-      <ion-back-button  text="" defaultHref="profil"></ion-back-button>
+    <ion-buttons slot="start">
+      <ion-back-button
+        style="color: white; font-size: large;"
+        text=""
+        
+        defaultHref="profil"
+      ></ion-back-button>
     </ion-buttons>
-    <ion-title size="" style="color: white">Changer de mot de passe</ion-title>
+    <ion-title style="color: white; font-size: large;">Changer mot de passe</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -25,67 +30,103 @@
 
       <div class="mm" style="margin-top: 15%">
         <div class="inputWithIcon">
-          <label>Mot de passe actuel</label>
-          <div class="form-control" style="display: flex;">
+          <label>Mot de passe actuel <span style="color: red">*</span> </label>
+          <div class="form-control" style="display: flex">
+            <input
+              style="border: none !important; width: 200%"
+              [type]="type ? 'password' : 'text'"
+              name="currentpassword"
+              type="password"
+              placeholder="Ancien mot de passe"
+              minlength="6"
+              maxlength="20"
+              required
+              ngModel
+            />
+            <i class="bi bi-shield-lock ii"></i>
 
-          <input
-          style="border: none !important;"
+            <ion-icon
+              [name]="type ? 'eye-off' : 'eye'"
+              slot="end"
+              color="dark"
+              (click)="changeType()"
+              style="
+                font-family: 'Poppins';
+                font-style: normal;
+                opacity: 0.5;
+                margin-top: -4%;
+                margin-left: 2%;
+                font-size: 50px;
+              "
+            ></ion-icon>
+          </div>
+          <div class="inputWithIcon">
+            <label
+              >Nouveau mot de passe <span style="color: red">*</span>
+            </label>
+            <div class="form-control" style="display: flex">
+              <input
+                style="border: none !important; width: 200%"
                 [type]="type ? 'password' : 'text'"
-           
-            name="currentpassword"
-            type="password"
-            placeholder="Ancien mot de passe"
-            minlength="6"
-            maxlength="20"
-            required
-            ngModel
-          />
-          <i class="bi bi-shield-lock"></i>
+                name="newpassword"
+                type="password"
+                placeholder="Nouveau mot de passe"
+                minlength="6"
+                maxlength="20"
+                required
+                ngModel
+              />
+              <i class="bi bi-key ii1"></i>
 
-          <ion-icon [name]="type ? 'eye-off' : 'eye'" slot="end" color="dark" (click)="changeType()" style="font-family: 'Poppins';
-          font-style: normal; opacity: 0.5; margin-top: 2%; margin-left: 2%;"></ion-icon>
+              <ion-icon
+                [name]="type ? 'eye-off' : 'eye'"
+                slot="end"
+                color="dark"
+                (click)="changeType()"
+                style="
+                  font-family: 'Poppins';
+                  font-style: normal;
+                  opacity: 0.5;
+                  margin-top: -4%;
+                  margin-left: 2%;
+                  font-size: 50px;
+                "
+              ></ion-icon>
+            </div>
           </div>
-          <div class="inputWithIcon">
-            <label>Nouveau mot de passe</label>
-            <div class="form-control" style="display: flex;">
-            <input
-            style="border: none !important;"
-            [type]="type ? 'password' : 'text'"
-       
-              name="newpassword"
-              type="password"
-              placeholder="Nouveau mot de passe"
-              minlength="6"
-              maxlength="20"
-              required
-              ngModel
-            />
-            <i class="bi bi-key"></i>
-            
-          <ion-icon [name]="type ? 'eye-off' : 'eye'" slot="end" color="dark" (click)="changeType()" style="font-family: 'Poppins';
-          font-style: normal; opacity: 0.5; margin-top: 2%; margin-left: 2%;"></ion-icon>
-          </div>
-        </div>
 
           <div class="inputWithIcon">
-            <label>Confirmer Nouveau mot de passe</label>
-            <div class="form-control" style="display: flex;">
-            <input
-            style="border: none !important;"
-            [type]="type ? 'password' : 'text'"
-           
-              name="confirmpassword"
-              type="password"
-              placeholder="Retaper le nouveau mot de passe"
-              minlength="6"
-              maxlength="20"
-              required
-              ngModel
-            />
-            <i class="bi bi-key"></i>
-            
-          <ion-icon [name]="type ? 'eye-off' : 'eye'" slot="end" color="dark" (click)="changeType()" style="font-family: 'Poppins';
-          font-style: normal; opacity: 0.5; margin-top: 2%; margin-left: 2%;"></ion-icon>
+            <label
+              >Confirmer Nouveau mot de passe <span style="color: red">*</span>
+            </label>
+            <div class="form-control" style="display: flex">
+              <input
+                style="border: none !important; width: 200%"
+                [type]="type ? 'password' : 'text'"
+                name="confirmpassword"
+                type="password"
+                placeholder="Retaper le nouveau mot de passe"
+                minlength="6"
+                maxlength="20"
+                required
+                ngModel
+              />
+              <i class="bi bi-key ii2"></i>
+
+              <ion-icon
+                [name]="type ? 'eye-off' : 'eye'"
+                slot="end"
+                color="dark"
+                (click)="changeType()"
+                style="
+                  font-family: 'Poppins';
+                  font-style: normal;
+                  opacity: 0.5;
+                  margin-top: -4%;
+                  margin-left: 2%;
+                  font-size: 50px;
+                "
+              ></ion-icon>
             </div>
           </div>
         </div>
