--- a/src/app/password-update/password-update.page.scss
+++ b/src/app/password-update/password-update.page.scss
@@ -11,7 +11,7 @@ input[type="password"] {
 }
 
 .inputWithIcon input[type="password"] {
-  padding-left: 15px;
+  padding-left: 6%;
 }
 
 .inputWithIcon {
@@ -21,12 +21,22 @@ input[type="password"] {
 .inputWithIcon i {
   position: absolute;
   left: 0;
-  top: 26px;
+  top: 26%;
   padding: 9px 8px;
   color: #aaa;
   transition: 0.3s;
 }
 
+.ii{
+  margin-top: -6%;
+}
+
+.ii1{
+margin-top: 3%;
+}
+.ii2{
+  margin-top: 3%;
+  }
 
 input{
   outline: none;
