--- a/src/app/reset-password/reset-password.page.html
+++ b/src/app/reset-password/reset-password.page.html
@@ -3,27 +3,28 @@
     <ion-buttons slot="start">
       <ion-back-button
         text=""
-        style="color: white"
-        defaultHref="accueil"
+        style="color: white; font-size: large;"
+        defaultHref="connexion"
         (click)="goBack()"
       ></ion-back-button>
     </ion-buttons>
-    <ion-title size="" style="color: white; text-align: center">Reset password</ion-title>
+    <ion-title size="" style="color: white; text-align: center; font-size: large;">Réinitialiser Mot de Passe</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <div class="container justify-content-center align-items-center">
+  <div class="container justify-content-center align-items-center" style="margin-top: 10%;">
     <div class="form-wrapper text-center">
         <form #resetPasswordForm="ngForm" (ngSubmit)="onResetpassword(resetPasswordForm.value)" class="form-signin">
             <h2 class="h3 mb-3 font-weight-normal">Reinitialiser votre mot de passe</h2>
             <div class="form-group">
-                <input type="text" class="form-control" name="email" placeholder="Email" email required ngModel
+                <input type="text" class="form-control" name="email" placeholder="Votre Email" email required ngModel
                     #emailInput="ngModel">
                 <span class="help-block" *ngIf="emailInput.invalid && emailInput.touched">Veuillez S.V.P entrez un addresse e-mail valide</span>
             </div>
-            <button [disabled]="resetPasswordForm.invalid" class=" btn-lg btn-primary btn-block" type="submit">Reset password</button>
+            <button [disabled]="resetPasswordForm.invalid" class=" btn-lg btn-primary btn-block" type="submit">Réinitialiser mot de passe</button>
         </form>
+       <hr>
         <small>Si vous avez un compte? <a routerLink="/connexion">Connectez-vous</a></small>
     </div>
 </div>
