--- a/src/app/accueil/accueil.page.html
+++ b/src/app/accueil/accueil.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar style="--background: #24a8f2">
-    <ion-title size="" style="color: white; text-align: center"
+    <ion-title style="color: white; text-align: center; font-size: large;"
       >Accueil</ion-title
     >
   </ion-toolbar>
@@ -53,15 +53,15 @@
     </div>
 
     <div class="row">
-      <p class="text" style="text-align: justify; margin-top: 10px">
+      <p class="text" style=" margin-top: 4%">
         L'<b>application Malienw Akilina</b> est une plateforme de partage
         d'idée, permettant aux Maliens de s'exprimer de manière très respectueux
         et de façon convenable pour mieux construire le Mali.
         <br />
       </p>
     </div>
-    <div class="button">
-      <i class="bi bi-volume-up-fill"></i>
+    <div class="button" style="text-align: right;">
+      <i class="bi bi-volume-up-fill" style="font-size: x-large;"></i>
     </div>
 
     <p class="m" style="text-align: center">
@@ -87,15 +87,22 @@
             routerLink="/ministere/{{minist.id_ministere}}"
           >
             <ion-card-header>
-              <img src="{{minist.image}}" srcset="" />
+              <div class="min" style="text-align: center;">
+              <img class="min1" src="{{minist.image}}" srcset="" style="margin-bottom: 3%;"/>
               <ion-card-subtitle>{{minist.libelle}}</ion-card-subtitle>
+            </div>
             </ion-card-header>
           </ion-card>
         </ion-col>
       </ion-row>
     </ion-grid>
-    <div class="pag">
-      <pagination-controls (pageChange)="p = $event"></pagination-controls>
+    <div class="pag" style="font-size: 100%;">
+      <pagination-controls style="font-size: 100%;"
+        (pageChange)="p = $event"
+        nextLabel="Suivants"
+        previousLabel="Précedents"
+        [responsive]="responsive"
+      ></pagination-controls>
     </div>
   </div>
 </ion-content>
