--- a/src/app/commentaire/commentaire.page.scss
+++ b/src/app/commentaire/commentaire.page.scss
@@ -1,72 +1,3 @@
-.social-cards ion-col {
-  padding: 0;
-}
-
-.tt {
-  margin-top: 7px;
-  margin-left: -65px;
-  position: absolute;
-}
-h2 {
-  margin-left: 5%;
-  margin-top: -3%;
-}
-
-button {
-  background: none;
-}
-ul {
-  z-index: 120;
-}
-
-ion-buttons.buttons-last-slot.sc-ion-buttons-md-h.sc-ion-buttons-md-s.md.hydrated {
-  margin-left: 26px;
-}
-.sc-ion-buttons-ios-h {
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-transform: translateZ(0);
-  transform: translateZ(0);
-  z-index: 99;
-  margin-left: 10px;
-}
-.nav {
-  position: fixed;
-}
-
-.imgae {
-  width: 40px !important;
-  height: 40px;
-}
-
-.textComment {
-  font-size: 10px;
-  text-align: justify;
-}
-.iconComment {
-  font-size: 12px;
-}
-.card-header {
-  height: 55px !important;
-  background-color: white;
-}
-
-.card-footer {
-  height: 50px !important;
-  background-color: white;
-}
-
-.mm {
-  margin-top: 3px;
-  margin-left: -20%;
-}
-
-.mod {
-  margin-top: 60%;
-}
-
 .butna {
   width: 40%;
   margin-left: auto;
@@ -77,6 +8,10 @@ ion-buttons.buttons-last-slot.sc-ion-buttons-md-h.sc-ion-buttons-md-s.md.hydrate
   height: 35px;
 }
 
+.mod {
+  margin-top: 60%;
+}
+
 .butn {
   width: 40%;
   margin-left: auto;
@@ -85,4 +20,25 @@ ion-buttons.buttons-last-slot.sc-ion-buttons-md-h.sc-ion-buttons-md-s.md.hydrate
   color: white;
   border-radius: 11px;
   height: 35px;
+}
+
+.mm {
+  margin-left: -33%;
+  margin-top: 2%;
+}
+
+.textComment {
+  font-size: 98%;
+}
+.iconComment {
+  font-size: 18px;
+}
+.card-header {
+  height: 55% !important;
+  background-color: white;
+}
+
+.card-footer {
+  height: 55% !important;
+  background-color: white;
 }
