--- a/src/app/connexion/connexion.page.scss
+++ b/src/app/connexion/connexion.page.scss
@@ -22,18 +22,18 @@ p.ins {
 }
 label {
   display: inline-block;
-  font-size: 11px;
+  font-size: 80%;
 }
 
-.txtAuth {
-  color: #171c25;
-  font-size: 0.6rem;
-  text-align: center;
-  margin: 0;
-  padding: 0;
-}
+// .txtAuth {
+//   color: #171c25;
+//   font-size: 0.6rem;
+//   text-align: center;
+//   margin: 0;
+//   padding: 0;
+// }
 
-.iconss {
-  text-align: center;
-  margin-bottom: 10px;
-}
+// .iconss {
+//   text-align: center;
+//   margin-bottom: 10px;
+// }
