--- a/src/app/notification/notification.page.html
+++ b/src/app/notification/notification.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar style="--background: #24a8f2">
-    <ion-title size="" style="color: white; text-align: center"
+    <ion-title style="color: white; text-align: center; font-size: large;"
       >Notification</ion-title
     >
     <ion-buttons> </ion-buttons>
