--- a/src/app/profil/profil.page.html
+++ b/src/app/profil/profil.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar style="--background: #24a8f2">
-    <ion-title size="" style="color: white; text-align: center"
+    <ion-title size="" style="color: white; text-align: center; font-size: large;"
       >Profil</ion-title
     >
   </ion-toolbar>
