--- a/src/app/profil/profil.page.scss
+++ b/src/app/profil/profil.page.scss
@@ -1,10 +1,11 @@
-.container {
-  padding: 0 16px;
-  padding-bottom: 0px;
-  background: #f9f9f9;
-}
+// .container {
+//   padding: 0 16px;
+//   padding-bottom: 0px;
+//   background: #f9f9f9;
+// }
 section.profile {
   margin-bottom: 32px;
+  margin-top: 10px;
   .image {
     width: 140px;
     height: 140px;
@@ -22,16 +23,16 @@ section.profile {
     text-align: center;
     .name {
       font-weight: 600;
-      margin-bottom: 8px;
+      margin-bottom: 2%;
     }
   }
 }
 
 section.settings {
   .setting {
-    margin-bottom: 24px;
+    margin-bottom: 7%;
     .s-title {
-      margin-bottom: 16px;
+      margin-bottom: 5%;
       h4 {
         margin: 0;
         font-weight: 600;
@@ -63,9 +64,9 @@ section.settings {
   }
 }
 
-.p-content {
-  margin-top: 5%;
-}
+// .p-content {
+//   margin-top: 1%;
+// }
 
 .btnn {
   text-align: center;
@@ -85,9 +86,9 @@ section.settings {
   margin: 0 auto;
 }
 
-b {
-  width: 100%;
-}
+// b {
+//   width: 100%;
+// }
 
 .ripple-parent {
   display: flex;
@@ -99,8 +100,6 @@ b {
 
   border: 1px solid #ddd;
 
-  user-select: none;
-
   width: 100%;
   height: 50px;
   border-radius: 8px;
@@ -110,23 +109,23 @@ b {
   color: red;
 }
 
-img.prof {
-  width: 41%;
-  margin-top: 4%;
-  height: inherit;
-  object-fit: cover;
-}
+// img.prof {
+//   width: 41%;
+//  // margin-top: 4%;
+//   height: inherit;
+//   object-fit: cover;
+// }
 
-ion-badge.ios.hydrated[_ngcontent-wvp-c150] {
-  margin-left: -1%;
-  margin-top: 2%;
-}
+// ion-badge.ios.hydrated[_ngcontent-wvp-c150] {
+//   margin-left: -1%;
+//   margin-top: 2%;
+// }
 
 ion-badge {
   position: absolute;
-  top: 112px;
-  left: 117px;
-  font-size: 35px;
+  top: 92px;
+  left: 43%;
+  font-size: 40px;
   background-color: transparent;
   cursor: pointer;
   color: #fff;
