--- a/src/app/vocal/vocal.page.scss
+++ b/src/app/vocal/vocal.page.scss
@@ -3,46 +3,50 @@
 //     justify-content: space-between;
 // }
 
-ion-avatar {
-  height: 45px;
-  width: 45px;
-}
-h3 {
-  // font-weight: 700;
-  font-size: 15px;
-  margin-top: 10px;
-  margin-left: 7px;
-}
+// ion-avatar {
+//   height: 45px;
+//   width: 45px;
+// }
+// h3 {
+//   // font-weight: 700;
+//   font-size: 15px;
+//   margin-top: 10px;
+//   margin-left: 7px;
+// }
 .tout {
   display: grid;
   grid-template-columns: 17% 82%;
   margin-bottom: 0px;
 }
-.card {
-  margin-bottom: 1%;
-}
-audio{
-  width: 240px;
-  height: 70%;
- // margin-top: 0px;
-  margin-left: 10%;
-  // display: flex;
- // justify-content: center;
-  align-items: center;
-}
-.crd{
-  height: 105px !important;
-}
 
-.imgae {
-  width: 40px !important;
-  height: 40px;
-  margin-left: 10%;
-  margin-top: 5%;
-}
 
-.mm{
-  margin-left: 5%;
-  margin-top: -3%;
-}
+
+// .card {
+//   margin-bottom: 1%;
+// }
+// audio{
+//   //width: 95%;
+//   height: 70%;
+//  // margin-top: 0px;
+//   margin-left: auto;
+//   margin-right: auto;
+//   // display: flex;
+//  // justify-content: center;
+//   align-items: center;
+// }
+// .crd{
+//   height: 105px !important;
+// }
+
+// .imgae {
+//   width: 40px !important;
+//   height: 40px;
+//   margin-left: 10%;
+//   margin-top: 5%;
+// }
+
+// .mm{
+//   margin-left: 5%;
+//   margin-top: -3%;
+// }
 
